--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<h6>
 				Witaj na mojej stronie!<br /><br />
 				Nazywam się Mikołaj Wolak i mam 14 lat. Uczęszczam do Gimnazjum nr.1 w Swarzędzu. Interesuje się piłką nożną i grami komputerowymi.
-			<img src="ekos.jpg"/>
+			<img src="/ekos.jpg"/>
 			</h6>
 			</div>
 			<div class="yt">
