--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 			<div style="clear:both;"></div>
 			
 			<div class="tile4">
-				<i>Strona wykonana za pomocą Notepad++</i><br />
+				<i>Strona wykonana za pomocą Notepad++ i GitHub</i><br />
 			</div>
 		</div>
 		<div class="square">
 			<div class="tile5">
 			<h6>
 				Witaj na mojej stronie!<br /><br />
-				Nazywam się Mikołaj Wolak i mam 14 lat. Uczęszczam do Gimnazjum nr.1 w Swarzędzu. Interesuje się piłką nożną i grami komputerowymi.
+				Nazywam się Mikołaj Wolak i mam 14 lat. Uczęszczam do Gimnazjum nr.1 w Swarzędzu. Interesuje się piłką nożną i grami.
 			<img src="/ekos.jpg"/>
 			</h6>
 			</div>
